Fix button misalignment

--- a/Backend/oekaki_chat/static/css/canvas.css
+++ b/Backend/oekaki_chat/static/css/canvas.css
@@ -172,6 +172,10 @@ img{
   transition: .4s;
 }
 
+form{
+  display: inline-block;
+}
+
 #download:hover, #save-btn:hover{
   background: #FFFEFA;
   color: #DB7C5E;
